--- a/.classpath
+++ b/.classpath
@@ -1,14 +1,46 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
 	<classpathentry kind="src" path="src"/>
+	<classpathentry exported="true" kind="con" path="org.eclipse.fx.ide.jdt.core.JAVAFX_CONTAINER">
+		<attributes>
+			<attribute name="module" value="true"/>
+		</attributes>
+	</classpathentry>
+	<classpathentry exported="true" kind="lib" path="bibliotecas/hamcrest-api-1.0.jar">
+		<attributes>
+			<attribute name="module" value="true"/>
+		</attributes>
+	</classpathentry>
+	<classpathentry exported="true" kind="lib" path="bibliotecas/hamcrest-junit-2.0.0.0.jar">
+		<attributes>
+			<attribute name="module" value="true"/>
+		</attributes>
+	</classpathentry>
+	<classpathentry exported="true" kind="lib" path="bibliotecas/jcommon-1.0.23.jar">
+		<attributes>
+			<attribute name="module" value="true"/>
+		</attributes>
+	</classpathentry>
+	<classpathentry exported="true" kind="lib" path="bibliotecas/jfreechart-1.0.19.jar">
+		<attributes>
+			<attribute name="module" value="true"/>
+		</attributes>
+	</classpathentry>
+	<classpathentry exported="true" kind="lib" path="bibliotecas/jni4net.j-0.8.8.0.jar">
+		<attributes>
+			<attribute name="module" value="true"/>
+		</attributes>
+	</classpathentry>
+	<classpathentry exported="true" kind="lib" path="bibliotecas/LapSeparatorJNI.j4n.jar">
+		<attributes>
+			<attribute name="module" value="true"/>
+		</attributes>
+	</classpathentry>
+	<classpathentry exported="true" kind="lib" path="bibliotecas/xstream-1.4.2.jar">
+		<attributes>
+			<attribute name="module" value="true"/>
+		</attributes>
+	</classpathentry>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
-	<classpathentry kind="con" path="org.eclipse.fx.ide.jdt.core.JAVAFX_CONTAINER"/>
-	<classpathentry kind="lib" path="bibliotecas/hamcrest-api-1.0.jar"/>
-	<classpathentry kind="lib" path="bibliotecas/hamcrest-junit-2.0.0.0.jar"/>
-	<classpathentry kind="lib" path="bibliotecas/jcommon-1.0.23.jar"/>
-	<classpathentry kind="lib" path="bibliotecas/jfreechart-1.0.19.jar"/>
-	<classpathentry kind="lib" path="bibliotecas/jni4net.j-0.8.8.0.jar"/>
-	<classpathentry kind="lib" path="bibliotecas/LapSeparatorJNI.j4n.jar"/>
-	<classpathentry kind="lib" path="bibliotecas/xstream-1.4.2.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
